# ecalculator

./: .gitignore  .gitmodules  README.md  meson.build
include/: calculator.hpp  input.hpp  input_fwd.hpp  parser.hpp  scanner.hpp  symbol_table.hpp
include/kx/: stack.hpp  stack_ff.hpp  stack_seq.hpp  write_ln.hpp
src/: calculator.cpp  input.cpp  main.cpp  main_expr_based_calculator.cpp  main_stack_based_calculator.cpp  meson.build  parser.cpp  scanner.cpp  symbol_table.cpp
src/kx/: stack_seq.cpp
test/: meson.build
test/kx/container/: stack_ff_test.cpp
